Change fruit emoji in game link from 🍒 to 🍎

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2>🎮 Hry</h2>
 
     <!-- ODKAZ NA TVOJI HRU -->
-    <a class="item" href="games/loveniovoce/loveniovoce.html">🍒 Lovení ovoce</a>
+    <a class="item" href="games/loveniovoce/loveniovoce.html">🍎 Lovení ovoce</a>
 
     <!-- Sem můžeš doplňovat další -->
     <a class="item" href="#">⚔️ Dungeon Runner (coming soon)</a>
