--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- ODKAZ NA TVOJI HRU -->
     <a class="item" href="games/loveniovoce/loveniovoce.html">🍎 Lovení ovoce</a>
-
+    <a class="item" href="games/psani/psani.html">📝 Psaní</a>
     <!-- Sem můžeš doplňovat další -->
     <a class="item" href="#">⚔️ Dungeon Runner (coming soon)</a>
 </div>
